--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next",
+  "name": "next-site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,5 +11,8 @@
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.0"
   }
 }
