--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx", "pages/_app.js"
   ],
   "exclude": [
     "node_modules"
