--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "reactstrap": "^8.8.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
